# learning-tester-gtest

./: .gitignore  CMakeLists.txt  README.md  run
include/: not-implemented-exception.hh
test/: CMakeLists.txt  fixture-test.cc  parameter-test.cc  simple-test.cc  stub-test-double.cc  test.cc  throw-test.cc  timeout-test.cc
tester/: CMakeLists.txt  fixture-test.cc  simple-test.cc  timeout-test.cc
tester/double/: dumy.cc  fake.cc  spy.cc  stub.cc
tester/mock/: delegate-call.cc  destructor-call.cc  expect-call.cc  invoke.cc  matcher.cc  matcher1.cc  matcher2.cc  on-call.cc  out-param.cc  overload.cc  parent-call.cc  protect-unexpected-call.cc  return-ref.cc  set-default-value.cc
